# minecraft-auth

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  downloader.rs  error.rs  handle.rs  instance.rs  java.rs  lib.rs  native.rs  user.rs  version.rs
src/data/: argument.rs  asset.rs  download.rs  java.rs  library.rs  mod.rs  package.rs  version.rs
