[package]
name = "minecraft-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
dirs = "4.0.0"
futures = "0.3.17"
serde_json = "1.0.72"
zip = "0.5.13"
log = "0.4.14"

[dependencies.reqwest]
version = "0.11.5"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]
